--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,141 +1,38 @@
-name: CI
+name: ci
 
 on:
   push:
-    branches: [main, release/*]
-  pull_request:
+    branches:
+      - 'main'
 
 jobs:
-  test:
-    runs-on: ${{ matrix.os }}
-
-    # Run each command in parallel with the same setup steps.
-    strategy:
-      fail-fast: false
-      matrix:
-        os:
-          - ubuntu-20.04
-        config:
-          # Specify names so that the GitHub branch protection settings for
-          # required checks don't need to change if we ever change the commands used.
-          - name: lint
-            command: |
-              # lint steps
-              set -x
-              yarn license-check
-              yarn dedupe --check
-              yarn run tsc --noEmit # typecheck files that are not included by webpack or package builds
-              yarn run lint:ci
-              yarn run lint:unused-exports
-              yarn run lint:dependencies
-          - name: packages
-            command: yarn run build:packages
-          - name: web
-            command: yarn run web:build:prod
-          - name: build benchmark
-            command: yarn run benchmark:build:prod
-          - name: test
-            command: yarn run test --maxWorkers=100%
-        include:
-          - os: windows-2019
-            config:
-              name: packages
-              command: echo complete
-
-    name: ${{ matrix.config.name }} (${{ matrix.os }})
-
+  docker:
+    runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4.1.1
+      -
+        name: Checkout
+        uses: actions/checkout@v3
         with:
-          lfs: true
-
-      - uses: actions/setup-node@v4.0.1
+            lfs: 'true'
+            submodules: 'true'
+      -
+        name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+      -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      -
+        name: Login to DockerHub
+        uses: docker/login-action@v2
         with:
-          node-version: 16.17
-      - run: corepack enable yarn
-
-      - name: Restore cache
-        uses: actions/cache@v4.0.0
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      -
+        name: Build and push
+        uses: docker/build-push-action@v3
         with:
-          path: |
-            .yarn/cache
-            **/node_modules
-          key: v5-${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: v5-${{ runner.os }}-yarn-
-
-      - run: yarn install --immutable
-
-      - run: ${{ matrix.config.command }}
-
-  storybook:
-    name: storybook (ubuntu-20.04)
-    runs-on: ubuntu-20.04
-
-    steps:
-      - uses: actions/checkout@v4.1.1
-        with:
-          fetch-depth: 0 # Required for Chromatic
-          lfs: true
-
-      - uses: actions/setup-node@v4.0.1
-        with:
-          node-version: 16.17
-      - run: corepack enable yarn
-
-      - name: Restore cache
-        uses: actions/cache@v4.0.0
-        with:
-          path: |
-            .yarn/cache
-            **/node_modules
-          key: v5-${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: v5-${{ runner.os }}-yarn-
-
-      - run: yarn install --immutable
-
-      - run: yarn workspace @foxglove/studio-base run storybook:build
-
-      # Chromatic only runs on pushes or pulls to our source repo
-      - uses: chromaui/action@v10
-        if: ${{ github.event.repository.full_name == 'foxglove/studio' }}
-        with:
-          autoAcceptChanges: main
-          exitOnceUploaded: true
-          onlyChanged: true
-          projectToken: f50040a29fb8 # plaintext to allow building on PRs from forks
-          storybookBuildDir: storybook-static
-
-  integration:
-    runs-on: ${{ matrix.os }}
-    timeout-minutes: 10
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [ubuntu-20.04]
-
-    name: integration (${{ matrix.os }})
-
-    steps:
-      - uses: actions/checkout@v4.1.1
-        with:
-          lfs: true
-
-      - uses: actions/setup-node@v4.0.1
-        with:
-          node-version: 16.17
-      - run: corepack enable yarn
-
-      - name: Restore cache
-        uses: actions/cache@v4.0.0
-        with:
-          path: |
-            .yarn/cache
-            **/node_modules
-          key: v5-${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: v5-${{ runner.os }}-yarn-
-
-      - run: yarn install --immutable
-
-      - name: test:web-integration
-        if: matrix.os == 'ubuntu-20.04'
-        run: yarn run test:web-integration
+          context: .
+          platforms: linux/arm64,linux/amd64
+          push: true
+          tags: ghcr.io/${{ github.repository_owner }}/${{ github.event.repository.name }}:latest
